--- a/en/pathways-paper.html
+++ b/en/pathways-paper.html
@@ -455,18 +455,37 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div id="toc" class="toc2">
 <div id="toctitle">Table of Contents</div>
 <ul class="sectlevel1">
-<li><a href="#_executive_summary">Executive Summary</a></li>
-<li><a href="#_introduction">Introduction</a></li>
-<li><a href="#_platform_requirements">Platform Requirements</a></li>
-<li><a href="#_architecture">Architecture</a></li>
-<li><a href="#_lessons_learned">Lessons Learned</a></li>
-<li><a href="#_future_development">Future Development</a></li>
+<li><a href="#_executive_summary">1. Executive Summary</a></li>
+<li><a href="#_introduction">2. Introduction</a></li>
+<li><a href="#_platform_requirements">3. Platform Requirements</a>
+<ul class="sectlevel2">
+<li><a href="#_principles">3.1. Principles</a></li>
+</ul>
+</li>
+<li><a href="#_architecture">4. Architecture</a></li>
+<li><a href="#_lessons_learned">5. Lessons Learned</a>
+<ul class="sectlevel2">
+<li><a href="#_open_source_open_data_open_science_open_process">5.1. Open Source, Open Data, Open Science, Open Process</a></li>
+<li><a href="#_security">5.2. Security</a></li>
+<li><a href="#_optional_the_use_of_agile_principles_on_github_benefits_and_challenges">5.3. [optional] The use of Agile principles on GitHub; benefits and challenges</a></li>
+<li><a href="#_optional_opendrr_github_io_got_falsely_flagged_as_phishing_or_malicious">5.4. [optional] opendrr.github.io got falsely flagged as phishing or malicious</a></li>
+</ul>
+</li>
+<li><a href="#_future_development">6. Future Development</a>
+<ul class="sectlevel2">
+<li><a href="#_risk_profiler_v1">6.1. Risk Profiler (v1)</a></li>
+<li><a href="#_increase_in_scope_import_and_process_other_datasets_besides_earthquake">6.2. Increase in scope: Import and process other datasets besides earthquake</a></li>
+<li><a href="#_continued_automation_optimization_etc">6.3. Continued automation, optimization, etc.</a></li>
+<li><a href="#_promote_the_project">6.4. Promote the project</a></li>
+<li><a href="#_more">6.5. More&#8230;&#8203;</a></li>
+</ul>
+</li>
 </ul>
 </div>
 </div>
 <div id="content">
 <div class="sect1">
-<h2 id="_executive_summary"><a class="anchor" href="#_executive_summary"></a>Executive Summary</h2>
+<h2 id="_executive_summary"><a class="anchor" href="#_executive_summary"></a>1. Executive Summary</h2>
 <div class="sectionbody">
 <div class="paragraph">
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -477,7 +496,7 @@ Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deseru
 </div>
 </div>
 <div class="sect1">
-<h2 id="_introduction"><a class="anchor" href="#_introduction"></a>Introduction</h2>
+<h2 id="_introduction"><a class="anchor" href="#_introduction"></a>2. Introduction</h2>
 <div class="sectionbody">
 <div class="paragraph">
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -488,46 +507,263 @@ Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deseru
 </div>
 </div>
 <div class="sect1">
-<h2 id="_platform_requirements"><a class="anchor" href="#_platform_requirements"></a>Platform Requirements</h2>
+<h2 id="_platform_requirements"><a class="anchor" href="#_platform_requirements"></a>3. Platform Requirements</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<p>To support the Pathways activities and deliverables a platform with the following features and functions were desired:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Collaborative development of science assets and related documentation</p>
+</li>
+<li>
+<p>Centralized access to the science outputs</p>
+</li>
+<li>
+<p>Data and related services to align with industry best practices and standards</p>
+</li>
+</ul>
+</div>
+<div class="paragraph">
+<p>The operational context of the platform required that it was to be aligned with Government of Canada policies, directives, and standards. These included:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Government of Canada Policy on Service and Digital:</p>
+<div class="ulist">
+<ul>
+<li>
+<p>Government of Canada Directive on Service and Digital</p>
+<div class="ulist">
+<ul>
+<li>
+<p>Mandatory Procedures on Application Programming Interfaces</p>
+</li>
+</ul>
+</div>
+</li>
+<li>
+<p>Government of Canada Standard on Web Accessibility</p>
+</li>
+<li>
+<p>Government of Canada Standard on Web Interoperability</p>
+</li>
+<li>
+<p>Government of Canada Standard on Web Usability</p>
+</li>
+</ul>
+</div>
+</li>
+<li>
+<p>NRCan Open Science Initiative</p>
+</li>
+<li>
+<p>NRCan Scientific Integrity Policy</p>
+</li>
+</ul>
+</div>
+<div class="sect2">
+<h3 id="_principles"><a class="anchor" href="#_principles"></a>3.1. Principles</h3>
+<div class="paragraph">
+<p>The principles under which the platform would operate were established as:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Transparent</p>
+</li>
+<li>
+<p>Open</p>
+</li>
+<li>
+<p>Collaborative</p>
+</li>
+<li>
+<p>Accessible</p>
+</li>
+<li>
+<p>Robust</p>
+</li>
+</ul>
+</div>
 </div>
 </div>
 </div>
 <div class="sect1">
-<h2 id="_architecture"><a class="anchor" href="#_architecture"></a>Architecture</h2>
+<h2 id="_architecture"><a class="anchor" href="#_architecture"></a>4. Architecture</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<p>Do we need to do some diagram to show the flow?</p>
+</div>
+<div class="paragraph">
+<p>The OpenDRR platform extract-transform-load (ETL) pipeline consists of several open source technologies, namely PostgreSQL with PostGIS extension, Python, ElasticSearch/Kibana and PyGeoAPI. Each application is containerized using separate Docker containers which are orchestrated using Docker-Compose.</p>
+</div>
+<div class="paragraph">
+<p>Source data for this project includes the National Human Settlement Layers (physical exposure and social vulnerability), the National Seismic Risk model for Canada (CanadaSRM2, probabilistic), Canada’s National Earthquake Scenario Catalogue (deterministic), and boundary geometries are stored on the Open Disaster Risk Reduction Platform (OpenDRR) GitHub site using a large file storage service called Git LFS. The stack of technologies can be configured to run on a local machine with PostgreSQL and ElasticSearch environments running locally or can be configured to communicate with cloud deployments of these services. For example, the stack can be configured to communicate simultaneously with a PostgreSQL database on Amazon Web Services (AWS) Relational Database Service (RDS) and a Containerized ElasticSearch environment on an AWS Elastic Container Service (ECS). A common use case is to run the ETL process on a local desktop or AWS Elastic Compute Cloud (EC2) with a local containerized PostgreSQL environment and a cloud deployed ElasticSearch environment which can support a public or private application programming interface (API).</p>
+</div>
+<div class="paragraph">
+<p>The ETL process currently relies on a main shell script titled 'add_data.sh' which downloads the required source data files including comma separated value (csv), and GeoPackages (gpkg) into the local filesystem and performs necessary transformations to load the data into a PostgreSQL database. The script is written to be flexible enough to load any number of conformant deterministic earthquake scenarios and national seismic risk model data? and allows some flexibility in the contents of the input data as long as a minimal number of required fields are present. Once the required source data has been loaded into the database, a number of Structured Query Language (SQL) scripts help transform the data into a framework of meaningful earthquake risk indicators which in turn gets pushed to ES/Kibana ??? .</p>
+</div>
+<div class="paragraph">
+<p>Discuss the postgresql database? Briefly?  Schemas?
+The PostgreSQL database is created and has PostGIS extension enabled to allow for spatial data queries.   The source datas are loaded into their respected schema names and the results are generated into their respected schemas with results_ prefix.????</p>
+</div>
+<div class="paragraph">
+<p>Results are calculated and/or aggregated at different spatial scales dependent on the data.  For National Human Settlement Layers the results are in settled areas.  The probabilistic and deterministic data are calculated at the building level and aggregated up to the settled area and census subdivision levels.</p>
+</div>
+<div class="paragraph">
+<p>These results are aggregated at several different spatial scales, building, sauid, and csd level. The building level is the finest spatial resolution and aggregates all buildings of simmilar construction type for a given neighborhood. The Sauid level of aggregation groups all building types across the whole neighbourhood polygon. The Census Sub-divison (CSD) aggregation is a coarse aggregtion of all assets within a given CSD as defined by Statistics Canada.</p>
 </div>
 </div>
 </div>
 <div class="sect1">
-<h2 id="_lessons_learned"><a class="anchor" href="#_lessons_learned"></a>Lessons Learned</h2>
+<h2 id="_lessons_learned"><a class="anchor" href="#_lessons_learned"></a>5. Lessons Learned</h2>
 <div class="sectionbody">
+<div class="sect2">
+<h3 id="_open_source_open_data_open_science_open_process"><a class="anchor" href="#_open_source_open_data_open_science_open_process"></a>5.1. Open Source, Open Data, Open Science, Open Process</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>(May seem scary at first?) but many benefits</p>
+</li>
+<li>
+<p>full openness, transparency, accountability</p>
+</li>
+<li>
+<p>GitHub platform offers a lot of features and flexibility that we need</p>
+</li>
+<li>
+<p>Industry best practices</p>
+</li>
+<li>
+<p>Mutually beneficial relationship with GEM (OpenQuake)</p>
+</li>
+<li>
+<p>pygeoapi</p>
+</li>
+<li>
+<p>etc.</p>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_security"><a class="anchor" href="#_security"></a>5.2. Security</h3>
 <div class="paragraph">
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<p>Example: Apache Log4j vulnerability</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>We got confirmation from ITSEC that our ES endpoint was attacked. Since we were running 7.12.0 the attack failed.  Lesson: keep your software up to date.  (Credit: Joost,)</p>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="https://xeraa.net/blog/2021_mitigate-log4j2-log4shell-elasticsearch/">Mitigate Log4j2 / Log4Shell in Elasticsearch</a></p>
+</li>
+</ul>
+</div>
+</li>
+<li>
+<p>(a little bit about) keeping up-to-date vs. compatibility-breaking changes (e.g. Python 3.8 to 3.9); be prepared for extra work hours (manpower?) to resolve compatibility issues during upgrade&#8230;&#8203;</p>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_optional_the_use_of_agile_principles_on_github_benefits_and_challenges"><a class="anchor" href="#_optional_the_use_of_agile_principles_on_github_benefits_and_challenges"></a>5.3. [optional] The use of Agile principles on GitHub; benefits and challenges</h3>
+
+</div>
+<div class="sect2">
+<h3 id="_optional_opendrr_github_io_got_falsely_flagged_as_phishing_or_malicious"><a class="anchor" href="#_optional_opendrr_github_io_got_falsely_flagged_as_phishing_or_malicious"></a>5.4. [optional] opendrr.github.io got falsely flagged as phishing or malicious</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>CIRA, Google, VirusTotal; took a while to get off e.g. Microsoft SmartScreen</p>
+</li>
+<li>
+<p>Possibly due to the use of non Canada.ca template on a non .ca domain?</p>
+</li>
+<li>
+<p><a href="https://github.com/OpenDRR/opendrr/issues/122" class="bare">https://github.com/OpenDRR/opendrr/issues/122</a></p>
+</li>
+</ul>
+</div>
 </div>
 </div>
 </div>
 <div class="sect1">
-<h2 id="_future_development"><a class="anchor" href="#_future_development"></a>Future Development</h2>
+<h2 id="_future_development"><a class="anchor" href="#_future_development"></a>6. Future Development</h2>
 <div class="sectionbody">
-<div class="paragraph">
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<div class="sect2">
+<h3 id="_risk_profiler_v1"><a class="anchor" href="#_risk_profiler_v1"></a>6.1. Risk Profiler (v1)</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>Expected to be published before April 2022 (kudos to <a href="https://habitatseven.com/">HabitatSeven</a>)</p>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_increase_in_scope_import_and_process_other_datasets_besides_earthquake"><a class="anchor" href="#_increase_in_scope_import_and_process_other_datasets_besides_earthquake"></a>6.2. Increase in scope: Import and process other datasets besides earthquake</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>Flood: <a href="https://github.com/NRCan/CanFlood" class="bare">https://github.com/NRCan/CanFlood</a> (Open-source flood risk modelling toolbox)</p>
+</li>
+<li>
+<p>Wildfire</p>
+</li>
+<li>
+<p>Mudslides</p>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_continued_automation_optimization_etc"><a class="anchor" href="#_continued_automation_optimization_etc"></a>6.3. Continued automation, optimization, etc.</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>Increased use of GitHub Actions workflows</p>
+</li>
+<li>
+<p>Full CI (Continuous Integration, Continuous Delivery)</p>
+</li>
+<li>
+<p>Cost-savings (e.g. move off Git LFS wherever possible; cheaper alternatives&#8230;&#8203;)</p>
+</li>
+<li>
+<p>More automated testing, to catch errors as early as possible (preferrably at the pull request stage)</p>
+</li>
+<li>
+<p>Test-driven development (TDD) / Bahaviour driven development (BDD)?</p>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_promote_the_project"><a class="anchor" href="#_promote_the_project"></a>6.4. Promote the project</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>as a model with example that that other groups (countries/governments/companies etc.) can use</p>
+</li>
+<li>
+<p>(as open-source project) invite participation from open-source, scientific community, and the general public</p>
+</li>
+<li>
+<p>through web site(s), seminars/talks, publications</p>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_more"><a class="anchor" href="#_more"></a>6.5. More&#8230;&#8203;</h3>
+
 </div>
 </div>
 </div>
